tests/errors/binding/inst.fil
comp Add<G:1>() -> () {}
comp main<G:1>() -> () {
    A := new Add;
    a := A0<G>();
}